<resources>
    <string name="app_name" translatable="false">GameHub</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="info" translatable="false">Info:</string>
    <string name="waiting">Waiting…</string>
    <string name="tie">Tie</string>
    <string name="lost">Lost</string>
    <string name="won">Won</string>
    <string name="hint_mail" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="fullname_required">Full name is required!</string>
    <string name="age_required">Age is required!</string>
    <string name="email_required">Email is required!</string>
    <string name="email_invalid">Please provide valid email!</string>
    <string name="password_required">Password is required!</string>
    <string name="password_too_short">Password must be > 5 characters!</string>
    <string name="register_success">User has been registered successfully!</string>
    <string name="register_failed">Failed to register! Try again!</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="web_client_id" translatable="false">1077730676805-64sqt78t85i2jmb8gct837b0espm9lpd.apps.googleusercontent.com</string>
    <string name="logout">logout</string>
    <string name="start">Start</string>
    <string name="login_failed">Failed to login! Email or password is incorrect.</string>
    <string name="choose_username">Choose a public visible username:</string>
    <string name="username">Username</string>
    <string name="accept">Accept</string>
    <string name="googleSignInFailed">Google sign in failed!</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="rock_paper_scissors">Rock Paper Scissors</string>
    <string name="game_won">Game won!</string>
    <string name="game_lost">Game lost!</string>
    <string name="add_player">Add</string>
    <string name="insert_playername">Insert player name</string>
    <string name="show_profile">Show profile</string>
    <string name="delete_friend">Delete</string>
    <string name="Name" translatable="false">Name</string>
    <string name="send_password_reset">Send password reset</string>
    <string name="back_to_login">Back to Login</string>
</resources>