<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_rock_paper_scissors"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".games.RockPaperScissorsFragment">

    <include
        android:id="@+id/scoreboard"
        layout="@layout/layout_scoreboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEnemyWeapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@id/linear_weapon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linear_weapon"
        app:layout_constraintTop_toTopOf="@id/linear_weapon">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/waiting" />

            <TextView
                android:id="@+id/textviewEnemyWeapon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting"
                android:textAllCaps="true"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreboard"
        app:layout_constraintVertical_bias="0.3">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/holo_green_light"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/paper" />

                <TextView
                    android:id="@+id/textview_paper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paper"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/holo_green_light"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/rock" />

                <TextView
                    android:id="@+id/textview_rock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rock"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/holo_green_light"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/scissors" />

                <TextView
                    android:id="@+id/textview_scissors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scissors"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <Button
        android:id="@+id/btnLockWeapon"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0ED6B9"
        android:text="Lock"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/linear_weapon"
        app:layout_constraintRight_toRightOf="@id/linear_weapon"
        app:layout_constraintTop_toBottomOf="@id/linear_weapon"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnLockWeapon"
        app:layout_constraintLeft_toRightOf="@id/btnLockWeapon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnLockWeapon" />


</androidx.constraintlayout.widget.ConstraintLayout>